--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "flexbox-template",
+  "name": "gulp",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/Alecto/flexbox-template",
-  "author": "Alecto <fomenkoandrey@inbox.ru>",
   "license": "MIT",
   "devDependencies": {
-    "normalize-scss": "^7.0.1"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.4.2",
-    "jquery": "^3.3.1",
-    "jquery.nicescroll": "^3.7.6"
+    "autoprefixer": "^9.8.5",
+    "browser-sync": "^2.26.12",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.10",
+    "gulp": "^4.0.2",
+    "gulp-csscomb": "^3.1.0",
+    "gulp-notify": "^3.2.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.0",
+    "sort-css-media-queries": "^1.5.0"
   }
 }
